# kkbox-churn-prediction

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
data-pipeline/: .gitignore  README.md  requirements.txt
data-pipeline/.dvc/: config
data-pipeline/feature_repo/: .gitignore  DATA_CONTRACT.md  data_sources.py  disease_entities.py  feature_store.yaml  feature_views.py  sample_retrieval.py
data-pipeline/ingestion/: covidcast.py  flusurv.py  ilinet.py  noaa.py
data-pipeline/kafka/: config.py
data-pipeline/scripts/: EDA.ipynb  prepare_disease_features.py
data-pipeline/transforms/: covidcast_transform.py  flusurv_transform.py  ilinet_transform.py  noaa_transform.py
data_pipeline/: README.md
data_pipeline/ingestion/: kafka_consumer.py  kafka_producer.py
data_pipeline/processing/: bronze_to_silver.py  silver_to_gold.py
data_pipeline/tests/: test_processing.py
feature_store/: Dockerfile  entities.py  feature_store.yaml  feature_views.py
feature_store/data/: registry.db
infra/docker/: README.md
model_pipeline/: README.md
model_pipeline/training/: train.py  update_preprocessing_config.py
monitoring_pipeline/: Dockerfile.streamlit  README.md  docker-compose.yml  nginx.conf  prometheus.yml  requirements.txt
monitoring_pipeline/dashboard/: app.py
report/: gen_diagrams.py  paper.tex
serving_pipeline/: Dockerfile  README.md  requirements.txt  test_feast.py
serving_pipeline/app/: drift.py  explain.py  feature_cache.py  main.py  metrics.py  predict.py  schemas.py  stats_store.py  stream.py
(+41 files in other folders)
