[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kkbox-churn-prediction"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Data Pipeline
    "kafka-python>=2.0.2",
    "google-cloud-storage>=2.14.0",
    "pyspark>=3.5.0",
    # Feature Store
    "feast[gcp]>=0.36.0",
    "redis>=5.0.0",
    # ML
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "mlflow>=2.10.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # Serving
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    # Monitoring & Dashboard
    "prometheus-client>=0.20.0",
    "streamlit>=1.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "httpx>=0.27.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "data_pipeline/tests",
    "model_pipeline/tests",
    "serving_pipeline/tests",
    "monitoring_pipeline/tests",
]

[tool.setuptools.packages.find]
include = ["data_pipeline*", "model_pipeline*", "serving_pipeline*", "monitoring_pipeline*"]
